absolute element with drop-shadow is not repainted when relative parent moves. https://bugs.webkit.org/show_bug.cgi?id=118411

Reviewed by NOBODY (OOPS!).

Notify software filters flag in the renderview to trigger correct repaint rect
for filters shadow/blur.repaint rect determined at
RenderObject::containerForRepaint()